--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -17,6 +17,6 @@ Split into those with an order defined and those without
 
 <div id="post-list" class="flex-grow-1 px-xl-1">
   {% for article in ordered %}
-      {% include post_list_item.html post=article %}
+      {% include post_index_item.html post=article %}
   {% endfor %}
 </div>
