image cdn tweaks

--- a/_includes/post_index_item.html
+++ b/_includes/post_index_item.html
@@ -15,6 +15,7 @@ Enclosing container class controls layout:
     {%- endcapture -%}
 
     {%- assign src = src | strip -%}
+    <!-- src {{ src }} -->
 
     {%- if post.image.lqip -%}
         {% assign lqip = post.image.lqip %}
